kubernetes/phpmyadmin/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: mariadb-galera
  labels:
    app: phpmyadmin
    app.kubernetes.io/instance: phpmyadmin
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_22=Container Modifies Configs at Boot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin
      annotations:
        enable.version-checker.io/phpmyadmin: "true"
    spec:
      automountServiceAccountToken: false
      serviceAccountName: phpmyadmin-sa
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      #   runAsUser: 11001
      #   fsGroup: 11001
      containers:
        - image: bitnami/phpmyadmin:5.2.1-debian-12-r29@sha256:80c24993f6231809b77bc8c5d0b8a6c19e5669fdce6c08941497b4633762333d
          imagePullPolicy: Always
          name: phpmyadmin
          securityContext:
            # runAsUser: 11001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "75Mi"
              cpu: "50m"
            limits:
              memory: "250Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
              name: web
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: web
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: web
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
