kubernetes/phpmyadmin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: mariadb-galera
  labels:
    app.kubernetes.io/instance: phpmyadmin
spec:
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: phpmyadmin
