kubernetes/phpmyadmin/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: mariadb-galera
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: phpmyadmin
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: phpmyadmin
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
          podSelector:
            matchLabels:
              ingresscontroller.operator.openshift.io/deployment-ingresscontroller: apps
